# Standalone workspace so this dev tool never enters the program build or the
# test suite; it only talks to a running cluster.
[workspace]

[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
xcavate-roles = { path = "../../programs/xcavate-roles", features = ["no-entrypoint"] }
education-regions = { path = "../../programs/education-regions", features = ["no-entrypoint"] }
real-x-education = { path = "../../programs/real-x-education", features = ["no-entrypoint"] }
anchor-lang = "1.0.0"
anchor-spl = "1.0"
solana-client = "3.0"
solana-commitment-config = "3.1"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-transaction = "3.1"
serde_json = "1"
